# dotfiles

./: .Xdefaults  .bash_history  .bashrc  .gitconfig  .vimrc  .zshrc  Makefile.am  battery.sh  caps_lock2esc.sh  check.py  check_norme  color.data  config  configure.ac  esc2caps_lock.sh  exo  git_diff_wrapper  gitconfig  goodEncoding.sh  install  install_debian.sh  jogsoul.conf  kthread2.c  kthread2_2arg.c  lol  mkc.sh  mkcc.sh  mkhx.sh  prettyfact.cc  smashthestack  vimrc  zshrc
.fluxbox/: keys
.ssh/: id_rsa  id_rsa.pub  known_hosts
awesome/: rc.lua
awesome/themes/default/: theme.lua
dangereux/: folderSort.bat  surprise.confloose  trash.sh
